code/chapter7/flaskapp.virtualservice-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp
spec:
  hosts:
    - flaskapp.default.svc.cluster.local
  http:
    - match:
        - headers:
            lab:
              exact: canary
      route:
        - destination:
            host: flaskapp.default.svc.cluster.local
            subset: v2
    - route:
        - destination:
            host: flaskapp.default.svc.cluster.local
            subset: v1
