code/chapter7/flaskapp.virtualservice-version.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp
spec:
  hosts:
    - flaskapp.default.svc.cluster.local
  http:
    - match:
        - sourceLabels:
            app: sleep
            version: v1
      route:
        - destination:
            host: flaskapp.default.svc.cluster.local
            subset: v1
    - route:
        - destination:
            host: flaskapp.default.svc.cluster.local
            subset: v2
