code/chapter7/httpbin.virtualservice.delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "httpbin.default.svc.cluster.local"
  http:
    - route:
      - destination:
         host: httpbin.default.svc.cluster.local
      fault:
       delay:
         fixedDelay: 3s
         percent: 100
