code/chapter7/httpbin.virtualservice.timeout.retry.2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: httpbin.default.svc.cluster.local
      retries:
          attempts: 3
          perTryTimeout: 8s
      timeout: 3s
