code/chapter7/httpbin.virtualservice.timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.default.svc.cluster.local
  http:
    - timeout: 3s
      route:
        - destination:
            host: httpbin.default.svc.cluster.local
