code/chapter7/httpbin.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.default.svc.cluster.local
  http:
    - match:
        - uri:
            exact: "/get"
      redirect:
        uri: /post
    - route:
        - destination:
            host: httpbin.default.svc.cluster.local
